--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,9 @@
             </li>
 
             <li class="header-item">
-              <a class="header-link link current" href="portfolio.html">Портфоліо</a>
+              <a class="header-link link current" href="portfolio.html"
+                >Портфоліо</a
+              >
             </li>
 
             <li class="header-item">
@@ -101,14 +103,26 @@
           <!-- LIST IMG IN PORTFOLIO -->
           <ul class="portfolio-list list">
             <li class="portfolio-item">
-              <a class="portfolio-link" href="" target="_blank" rel="noopener noreferrer">
-                <img
+              <a
+                class="portfolio-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <div class="animation-div">
+                  <img
                   class="img"
                   src="./images/portfolio/portfolio-1.jpg"
                   alt="Website with three employee cards on a laptop. Two women and one man"
                   width="370"
                   height="294"
                 />
+                <p class="animation-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+                </div>
 
                 <div class="card">
                   <h2 class="portfolio-subtitle">Технокряк</h2>
@@ -118,7 +132,12 @@
             </li>
 
             <li class="portfolio-item">
-              <a class="portfolio-link" href="" target="_blank" rel="noopener noreferrer">
+              <a
+                class="portfolio-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <img
                   class="img"
                   src="./images/portfolio/portfolio-2.jpg"
@@ -137,7 +156,12 @@
             </li>
 
             <li class="portfolio-item">
-              <a class="portfolio-link" href="" target="_blank" rel="noopener noreferrer">
+              <a
+                class="portfolio-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <img
                   class="img"
                   src="./images/portfolio/portfolio-3.jpg"
@@ -154,7 +178,12 @@
             </li>
 
             <li class="portfolio-item">
-              <a class="portfolio-link" href="" target="_blank" rel="noopener noreferrer">
+              <a
+                class="portfolio-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <img
                   class="img"
                   src="./images/portfolio/portfolio-4.jpg"
@@ -171,7 +200,11 @@
             </li>
 
             <li class="portfolio-item">
-              <a class="portfolio-link" href="" target="_blank" rel="noopener noreferrer"
+              <a
+                class="portfolio-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
                 ><img
                   class="img"
                   src="./images/portfolio/portfolio-5.jpg"
@@ -188,7 +221,11 @@
             </li>
 
             <li class="portfolio-item">
-              <a class="portfolio-link" href="" target="_blank" rel="noopener noreferrer"
+              <a
+                class="portfolio-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
                 ><img
                   class="img"
                   src="./images/portfolio/portfolio-6.jpg"
@@ -205,7 +242,12 @@
             </li>
 
             <li class="portfolio-item">
-              <a class="portfolio-link" href="" target="_blank" rel="noopener noreferrer">
+              <a
+                class="portfolio-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <img
                   class="img"
                   src="./images/portfolio/portfolio-7.jpg"
@@ -222,7 +264,12 @@
             </li>
 
             <li class="portfolio-item">
-              <a class="portfolio-link" href="" target="_blank" rel="noopener noreferrer">
+              <a
+                class="portfolio-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <img
                   class="img"
                   src="./images/portfolio/portfolio-8.jpg"
@@ -239,7 +286,12 @@
             </li>
 
             <li class="portfolio-item">
-              <a class="portfolio-link" href="" target="_blank" rel="noopener noreferrer">
+              <a
+                class="portfolio-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <img
                   class="img"
                   src="./images/portfolio/portfolio-9.jpg"
