--- a/portfolio.html
+++ b/portfolio.html
@@ -116,12 +116,12 @@
                   alt="Website with three employee cards on a laptop. Two women and one man"
                   width="370"
                   height="294"
-                />
-                <p class="animation-text">
+                  />
+                  <p class="animation-text">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та сервісів. Все це дозволить відвідувачу отримати
                   вичерпні відомості про компанію чи приватну особу.
-                </p>
+                  </p>
                 </div>
 
                 <div class="card">
@@ -145,6 +145,11 @@
                   width="370"
                   height="294"
                 />
+                <p class="animation-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
 
                 <div class="card">
                   <h2 class="portfolio-subtitle">
@@ -169,6 +174,11 @@
                   width="370"
                   height="294"
                 />
+                <p class="animation-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
 
                 <div class="card">
                   <h2 class="portfolio-subtitle">Ресторан Seafood</h2>
@@ -191,6 +201,11 @@
                   width="370"
                   height="294"
                 />
+                <p class="animation-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
 
                 <div class="card">
                   <h2 class="portfolio-subtitle">Проєкт Prime</h2>
@@ -212,6 +227,11 @@
                   width="370"
                   height="294"
                 />
+                <p class="animation-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
 
                 <div class="card">
                   <h2 class="portfolio-subtitle">Проєкт Boxes</h2>
@@ -255,6 +275,11 @@
                   width="370"
                   height="294"
                 />
+                <p class="animation-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
 
                 <div class="card">
                   <h2 class="portfolio-subtitle">Видання Limited Edition</h2>
