--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button class="hero-button" type="button">Замовити послугу</button>
+          <button class="hero-button" type="button" data-modal-open>
+            Замовити послугу
+          </button>
         </div>
       </section>
       <!-- What we doing -->
@@ -201,9 +203,7 @@
                       aria-label="Instagram"
                     >
                       <svg class="team-socials icon" width="20" height="20">
-                        <use
-                          href="./images/svg/icons.svg#instagram"
-                        ></use>
+                        <use href="./images/svg/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -272,9 +272,7 @@
                       aria-label="Instagram"
                     >
                       <svg class="team-socials icon" width="20" height="20">
-                        <use
-                          href="./images/svg/icons.svg#instagram"
-                        ></use>
+                        <use href="./images/svg/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -343,9 +341,7 @@
                       aria-label="Instagram"
                     >
                       <svg class="team-socials icon" width="20" height="20">
-                        <use
-                          href="./images/svg/icons.svg#instagram"
-                        ></use>
+                        <use href="./images/svg/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -414,9 +410,7 @@
                       aria-label="Instagram"
                     >
                       <svg class="team-socials icon" width="20" height="20">
-                        <use
-                          href="./images/svg/icons.svg#instagram"
-                        ></use>
+                        <use href="./images/svg/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -644,5 +638,16 @@
         </div>
       </div>
     </footer>
+    <!-- MODAL WIndow -->
+    <div class="bacdroup" data-modal>
+      <div class="modal">
+        <button class="close-modal" data-modal-close type="button">
+          <svg class="cross" width="18" height="18">
+            <use class="res" href="./images/svg/Vecto.svg#cross"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
