--- a/portfolio.html
+++ b/portfolio.html
@@ -111,16 +111,16 @@
               >
                 <div class="animation-div">
                   <img
-                  class="img"
-                  src="./images/portfolio/portfolio-1.jpg"
-                  alt="Website with three employee cards on a laptop. Two women and one man"
-                  width="370"
-                  height="294"
+                    class="img"
+                    src="./images/portfolio/portfolio-1.jpg"
+                    alt="Website with three employee cards on a laptop. Two women and one man"
+                    width="370"
+                    height="294"
                   />
                   <p class="animation-text">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем
-                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
 
@@ -138,18 +138,20 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="img"
-                  src="./images/portfolio/portfolio-2.jpg"
-                  alt="two basketball players are dribbling the ball, player golden stars warrior put a block"
-                  width="370"
-                  height="294"
-                />
-                <p class="animation-text">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем
-                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.
-                </p>
+                <div class="animation-div">
+                  <img
+                    class="img"
+                    src="./images/portfolio/portfolio-2.jpg"
+                    alt="two basketball players are dribbling the ball, player golden stars warrior put a block"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="animation-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
 
                 <div class="card">
                   <h2 class="portfolio-subtitle">
@@ -167,18 +169,20 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="img"
-                  src="./images/portfolio/portfolio-3.jpg"
-                  alt="restaurant logo.in the background a fish in the foreground an inscription seafood restaurant est.2001"
-                  width="370"
-                  height="294"
-                />
-                <p class="animation-text">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем
-                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.
-                </p>
+                <div class="animation-div">
+                  <img
+                    class="img"
+                    src="./images/portfolio/portfolio-3.jpg"
+                    alt="restaurant logo.in the background a fish in the foreground an inscription seafood restaurant est.2001"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="animation-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
 
                 <div class="card">
                   <h2 class="portfolio-subtitle">Ресторан Seafood</h2>
@@ -194,18 +198,20 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="img"
-                  src="./images/portfolio/portfolio-4.jpg"
-                  alt="headphone black"
-                  width="370"
-                  height="294"
-                />
-                <p class="animation-text">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем
-                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.
-                </p>
+                <div class="animation-div">
+                  <img
+                    class="img"
+                    src="./images/portfolio/portfolio-4.jpg"
+                    alt="headphone black"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="animation-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
 
                 <div class="card">
                   <h2 class="portfolio-subtitle">Проєкт Prime</h2>
@@ -220,18 +226,21 @@
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
-                ><img
-                  class="img"
-                  src="./images/portfolio/portfolio-5.jpg"
-                  alt="two cardboard boxes"
-                  width="370"
-                  height="294"
-                />
-                <p class="animation-text">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем
-                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.
-                </p>
+              >
+                <div class="animation-div">
+                  <img
+                    class="img"
+                    src="./images/portfolio/portfolio-5.jpg"
+                    alt="two cardboard boxes"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="animation-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
 
                 <div class="card">
                   <h2 class="portfolio-subtitle">Проєкт Boxes</h2>
@@ -246,13 +255,21 @@
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
-                ><img
-                  class="img"
-                  src="./images/portfolio/portfolio-6.jpg"
-                  alt="the site is opened on a computer"
-                  width="370"
-                  height="294"
-                />
+              >
+                <div class="animation-div">
+                  <img
+                    class="img"
+                    src="./images/portfolio/portfolio-6.jpg"
+                    alt="the site is opened on a computer"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="animation-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
 
                 <div class="card">
                   <h2 class="portfolio-subtitle">Inspiration has no Borders</h2>
@@ -268,18 +285,20 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="img"
-                  src="./images/portfolio/portfolio-7.jpg"
-                  alt="magazine"
-                  width="370"
-                  height="294"
-                />
-                <p class="animation-text">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем
-                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.
-                </p>
+                <div class="animation-div">
+                  <img
+                    class="img"
+                    src="./images/portfolio/portfolio-7.jpg"
+                    alt="magazine"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="animation-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
 
                 <div class="card">
                   <h2 class="portfolio-subtitle">Видання Limited Edition</h2>
@@ -295,13 +314,20 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="img"
-                  src="./images/portfolio/portfolio-8.jpg"
-                  alt="a tag on a string with an inscription in the center of the tag lab el tag"
-                  width="370"
-                  height="294"
-                />
+                <div class="animation-div">
+                  <img
+                    class="img"
+                    src="./images/portfolio/portfolio-8.jpg"
+                    alt="a tag on a string with an inscription in the center of the tag lab el tag"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="animation-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
 
                 <div class="card">
                   <h2 class="portfolio-subtitle">Проєкт LAB</h2>
@@ -317,13 +343,20 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="img"
-                  src="./images/portfolio/portfolio-9.jpg"
-                  alt="hands of a witch on the keyboard. the growing business application is open on the laptop monitor. a man tries to enter the application"
-                  width="370"
-                  height="294"
-                />
+                <div class="animation-div">
+                  <img
+                    class="img"
+                    src="./images/portfolio/portfolio-9.jpg"
+                    alt="hands of a witch on the keyboard. the growing business application is open on the laptop monitor. a man tries to enter the application"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="animation-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
 
                 <div class="card">
                   <h2 class="portfolio-subtitle">Growing Business</h2>
