--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@
           <button class="hero-button" type="button" data-modal-open>
             Замовити послугу
           </button>
+          <!-- MODAL WIndow -->
+          <div class="bacdroup is-hidden" data-modal>
+            <div class="modal">
+              <button class="close-modal" data-modal-close type="button">
+                <svg class="cross" width="18" height="18">
+                  <use class="res" href="./images/svg/Vecto.svg#cross"></use>
+                </svg>
+              </button>
+            </div>
+          </div>
         </div>
       </section>
       <!-- What we doing -->
@@ -638,16 +648,7 @@
         </div>
       </div>
     </footer>
-    <!-- MODAL WIndow -->
-    <div class="bacdroup" data-modal>
-      <div class="modal">
-        <button class="close-modal" data-modal-close type="button">
-          <svg class="cross" width="18" height="18">
-            <use class="res" href="./images/svg/Vecto.svg#cross"></use>
-          </svg>
-        </button>
-      </div>
-    </div>
+
     <script src="./js/modal.js"></script>
   </body>
 </html>
