--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
                 width="370"
                 height="294"
               />
+              <h3 class="mini-title">Десктопні додатки</h3>
             </li>
 
             <li class="working-section-item">
@@ -172,6 +173,7 @@
                 width="370"
                 height="294"
               />
+              <h3 class="mini-title">Мобільні додатки</h3>
             </li>
 
             <li class="working-section-item">
@@ -182,6 +184,7 @@
                 width="370"
                 height="294"
               />
+              <h3 class="mini-title">Дизайнерські рішення</h3>
             </li>
           </ul>
         </div>
